2017-6-15
	-New skills added: Atk ploy, sturdy blow, firesweep lance, fire boost, panic ploy

2017-6-6:
	-Can now filter on changed damage, but same rounds and victor

2017-6-4:
	-Added Embla's Ward and Quickened Pulse
	-Fixed Panic causing debuffs to become buffs (this whole time I thought that was how it worked)

2017-5-30:
	-Added logic for new skills: Gradivus, Dazzling Staff, Wind Boost, Grani's Shield
	-Can now see overkill

2017-5-24:
	-Fixed stuff, I forgot what.
	-Results loading is a little slow. Maybe looking into using React for that portion.

2017-5-23:
	-Option to view only results that changed.
	-Export results.
	-Custom enemy lists
	-Import/export challenger and enemies
	-Introduced bugs

2017-5-19
	-Added new skills: Regal Blade

2017-5-15
	-Added new skills: Ragnarok, Earth Boost, Distant Def, Wrathful Staff
	-Added update notification

2017-5-7
	-Added absorb staff back in. When did I even delete that code?
	-Fixed healing specials healing for more than the enemy's remaining HP
	-Fixed S skills not actually being taken off when you switch hero
	-Fixed defiant res not working because I was looking for the skill "resiant res"
	-Added Siegfried.

2017-4-26:
	-Added new skills: Watersweep, Ragnell, Heavy Blade, Spur Def Res, Guard

2017-4-20:
	-Added Eckesachs.
	-Blazed it.

2017-4-16:
	-Added rarities below 5*.
	-Added the new skills (windsweeper, firesweep bow...)
	-Added S skills.
	-Added option to hide unaffecting skills from selection.
	-Changed skill select and rules UI to fit new stuff
	-Fixed gigantic issue with debuffs not being calculated properly that I'm astonished nobody noticed. 
		As I understand it, debuffs are only taken off after a unit does its turn.
		If a unit is debuffed after attacking and gets attacked on the next turn, it's still debuffed when it gets to attack again.
	-Fixed wary fighter interactions, I think??

2017-4-3:
	-Added code and images for bunny skills.
	-Added bunny images.
	-Added damage taken input.